crates/codegen/tests/snapshots/snapshots__blog__sqlite__user.snap
---
source: crates/codegen/tests/snapshots.rs
expression: content
---
#![allow(clippy::all, clippy::pedantic, unused_imports)]
use ::ruprizzle::serde::{Deserialize, Serialize};
use ::ruprizzle::sqlx::any::AnyRow;
use ::ruprizzle::types::chrono::{DateTime, NaiveDate, NaiveTime, Utc};
use ::ruprizzle::types::{Decimal, Uuid};
use ::ruprizzle::serde_json::Value as JsonValue;
use ::ruprizzle::Related;
use ::ruprizzle::Column;
///A registered account.
#[derive(Debug, Clone, PartialEq, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct User {
    pub id: Uuid,
    pub email: String,
    pub name: Option<String>,
    pub role: super::enums::Role,
    #[serde(skip_serializing_if = "::ruprizzle::Related::is_absent", default)]
    pub posts: ::ruprizzle::Related<Vec<super::post::Post>>,
    pub created_at: DateTime<Utc>,
    pub updated_at: DateTime<Utc>,
}
impl<'r> ::ruprizzle::sqlx::FromRow<'r, AnyRow> for User {
    fn from_row(row: &'r AnyRow) -> Result<Self, ::ruprizzle::sqlx::Error> {
        Ok(Self {
            id: ::ruprizzle::decode::text_idx(row, 0)?,
            email: ::ruprizzle::decode::direct_idx(row, 1)?,
            name: ::ruprizzle::decode::direct_opt_idx(row, 2)?,
            role: ::ruprizzle::decode::text_idx(row, 3)?,
            posts: ::ruprizzle::Related::default(),
            created_at: ::ruprizzle::decode::text_idx(row, 4)?,
            updated_at: ::ruprizzle::decode::text_idx(row, 5)?,
        })
    }
}
impl<'r> ::ruprizzle::sqlx::FromRow<'r, ::ruprizzle::sqlx::postgres::PgRow> for User {
    fn from_row(
        row: &'r ::ruprizzle::sqlx::postgres::PgRow,
    ) -> Result<Self, ::ruprizzle::sqlx::Error> {
        Ok(Self {
            id: ::ruprizzle::decode::text_idx(row, 0)?,
            email: ::ruprizzle::decode::direct_idx(row, 1)?,
            name: ::ruprizzle::decode::direct_opt_idx(row, 2)?,
            role: ::ruprizzle::decode::text_idx(row, 3)?,
            posts: ::ruprizzle::Related::default(),
            created_at: ::ruprizzle::decode::text_idx(row, 4)?,
            updated_at: ::ruprizzle::decode::text_idx(row, 5)?,
        })
    }
}
impl<'r> ::ruprizzle::sqlx::FromRow<'r, ::ruprizzle::sqlx::sqlite::SqliteRow> for User {
    fn from_row(
        row: &'r ::ruprizzle::sqlx::sqlite::SqliteRow,
    ) -> Result<Self, ::ruprizzle::sqlx::Error> {
        Ok(Self {
            id: ::ruprizzle::decode::text_idx(row, 0)?,
            email: ::ruprizzle::decode::direct_idx(row, 1)?,
            name: ::ruprizzle::decode::direct_opt_idx(row, 2)?,
            role: ::ruprizzle::decode::text_idx(row, 3)?,
            posts: ::ruprizzle::Related::default(),
            created_at: ::ruprizzle::decode::text_idx(row, 4)?,
            updated_at: ::ruprizzle::decode::text_idx(row, 5)?,
        })
    }
}
#[cfg(feature = "sqlite-rusqlite")]
impl ::ruprizzle::rusqlite::FromRusqliteRow for User {
    fn from_rusqlite_row(
        row: &mut ::ruprizzle::rusqlite::Row,
    ) -> Result<Self, ::ruprizzle::Error> {
        Ok(Self {
            id: row.take::<Uuid>(0)?,
            email: row.take::<String>(1)?,
            name: row.take::<Option<String>>(2)?,
            role: row.take::<super::enums::Role>(3)?,
            posts: ::ruprizzle::Related::default(),
            created_at: row.take::<DateTime<Utc>>(4)?,
            updated_at: row.take::<DateTime<Utc>>(5)?,
        })
    }
}
#[cfg(feature = "postgres-tokio-postgres")]
impl ::ruprizzle::tokio_postgres::FromTokioPostgresRow for User {
    fn from_tokio_postgres_row(
        row: &::ruprizzle::tokio_postgres::Row,
    ) -> Result<Self, ::ruprizzle::Error> {
        Ok(Self {
            id: row
                .try_get::<usize, Uuid>(0)
                .map_err(::ruprizzle::Error::TokioPostgres)?,
            email: row
                .try_get::<usize, String>(1)
                .map_err(::ruprizzle::Error::TokioPostgres)?,
            name: row
                .try_get::<usize, Option<String>>(2)
                .map_err(::ruprizzle::Error::TokioPostgres)?,
            role: row
                .try_get::<usize, String>(3)
                .map_err(::ruprizzle::Error::TokioPostgres)?
                .parse::<super::enums::Role>()
                .map_err(|e| ::ruprizzle::Error::Message(
                    format!("cannot parse enum: {e}"),
                ))?,
            posts: ::ruprizzle::Related::default(),
            created_at: row
                .try_get::<usize, DateTime<Utc>>(4)
                .map_err(::ruprizzle::Error::TokioPostgres)?,
            updated_at: row
                .try_get::<usize, DateTime<Utc>>(5)
                .map_err(::ruprizzle::Error::TokioPostgres)?,
        })
    }
}
/// Insert shape: required fields are required, defaulted/optional fields
/// are `Option` so the database can fill them in.
#[derive(Debug, Clone, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct UserInsert {
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub id: Option<Uuid>,
    pub email: String,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub name: Option<String>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub role: Option<super::enums::Role>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub created_at: Option<DateTime<Utc>>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub updated_at: Option<DateTime<Utc>>,
}
/// Update shape: every field is `Option` to support explicit nulls.
#[derive(Debug, Clone, Default, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct UserUpdate {
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub id: Option<Uuid>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub email: Option<String>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub name: Option<Option<String>>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub role: Option<super::enums::Role>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub created_at: Option<DateTime<Utc>>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub updated_at: Option<DateTime<Utc>>,
}
impl ::ruprizzle::Model for User {
    const TABLE: &'static str = "users";
    const PRIMARY_KEY: &'static str = "id";
    const COLUMNS: &'static [&'static str] = &[
        "id",
        "email",
        "name",
        "role",
        "created_at",
        "updated_at",
    ];
}
/// Table name for this model.
pub const TABLE: &str = "users";
pub const ID: Column<User, Uuid> = Column::new("users", "id");
pub const EMAIL: Column<User, String> = Column::new("users", "email");
pub const NAME: Column<User, String> = Column::new("users", "name");
pub const ROLE: Column<User, super::enums::Role> = Column::new("users", "role");
pub const CREATED_AT: Column<User, DateTime<Utc>> = Column::new("users", "created_at");
pub const UPDATED_AT: Column<User, DateTime<Utc>> = Column::new("users", "updated_at");
/// Returns an `IncludeList` for this relation.
pub fn posts() -> ::ruprizzle::IncludeList<'static, User, super::post::Post, Uuid, ()> {
    ::ruprizzle::IncludeList::new(
        |__row| __row.id,
        |__row, __loaded| __row.posts = __loaded,
        super::post::AUTHOR_ID,
        |__child| __child.author_id,
    )
}
/// Returns a filter for parents that have at least one matching child.
pub fn posts_some(
    f: ::ruprizzle::Filter<super::post::Post>,
) -> ::ruprizzle::Filter<User> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "posts",
        child_col: "author_id",
        parent_table: "users",
        parent_col: "id",
        filter: Box::new(f.node),
        negated: false,
    })
}
/// Returns a filter for parents that have no matching child.
pub fn posts_none(
    f: ::ruprizzle::Filter<super::post::Post>,
) -> ::ruprizzle::Filter<User> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "posts",
        child_col: "author_id",
        parent_table: "users",
        parent_col: "id",
        filter: Box::new(f.node),
        negated: true,
    })
}
/// Returns a filter for parents where every matching child satisfies `f`.
/// Vacuously true for parents with no children.
pub fn posts_every(
    f: ::ruprizzle::Filter<super::post::Post>,
) -> ::ruprizzle::Filter<User> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "posts",
        child_col: "author_id",
        parent_table: "users",
        parent_col: "id",
        filter: Box::new((!f).node),
        negated: true,
    })
}
/// Prisma-flavoured repository for `#model_name`.
#[derive(Debug, Clone, Copy)]
pub struct UserRepo<'a> {
    db: &'a super::Db,
}
impl<'a> UserRepo<'a> {
    /// Creates a new repository handle.
    pub(crate) fn new(db: &'a super::Db) -> Self {
        Self { db }
    }
    /// Start a `find_many` query.
    pub fn find_many(&self) -> ::ruprizzle::SelectQuery<'a, User> {
        ::ruprizzle::SelectQuery::new(self.db.raw_pool())
    }
    /// Start an `insert` query.
    pub fn create(&self, _data: UserInsert) -> ::ruprizzle::InsertQuery<'a, User> {
        let mut insert = ::ruprizzle::InsertQuery::new(self.db.raw_pool());
        insert = insert.set_optional(ID, _data.id);
        insert = insert.set(EMAIL, _data.email);
        insert = insert.set_optional(NAME, _data.name);
        insert = insert.set_optional(ROLE, _data.role);
        insert = insert.set_optional(CREATED_AT, _data.created_at);
        insert = insert.set_optional(UPDATED_AT, _data.updated_at);
        insert
    }
    /// Start a multi-row `insert` query.
    pub fn create_many(
        &self,
        _data: Vec<UserInsert>,
    ) -> ::ruprizzle::InsertManyQuery<'a, User> {
        let mut q = ::ruprizzle::InsertManyQuery::new(self.db.raw_pool());
        for _row in _data {
            q = q
                .row([
                    ("id", ::ruprizzle::Encodable::to_value(&_row.id)),
                    ("email", ::ruprizzle::Encodable::to_value(&_row.email)),
                    ("name", ::ruprizzle::Encodable::to_value(&_row.name)),
                    ("role", ::ruprizzle::Encodable::to_value(&_row.role)),
                    ("created_at", ::ruprizzle::Encodable::to_value(&_row.created_at)),
                    ("updated_at", ::ruprizzle::Encodable::to_value(&_row.updated_at)),
                ]);
        }
        q
    }
    /// Start an `update` query.
    pub fn update(&self) -> ::ruprizzle::UpdateQuery<'a, User> {
        ::ruprizzle::UpdateQuery::new(self.db.raw_pool())
    }
    /// Start a `delete` query.
    pub fn delete(&self) -> ::ruprizzle::DeleteQuery<'a, User> {
        ::ruprizzle::DeleteQuery::new(self.db.raw_pool())
    }
}
